--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server/server.js",
   "private": true,
   "dependencies": {
+    "@adobe/pdfservices-node-sdk": "^2.2.2",
     "babel": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.1",
