--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "body-parser": "^1.19.1",
     "core-js": "^3.23.2",
     "date-fns": "^2.28.0",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.1.5",
     "node": "^16.x",
+    "node-downloader-helper": "^2.1.1",
     "nodemailer": "^6.7.2",
     "nodemon": "^1.3.3",
     "react": "^17.0.2",
@@ -26,7 +27,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "stream": "^0.0.2",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "yauzl": "^2.10.0"
   },
   "scripts": {
     "hotloader": "webpack serve --config ./webpack.config.js --mode development --port 5000",
