--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^6.1.5",
     "node": "^16.x",
     "node-downloader-helper": "^2.1.1",
+    "node-fetch": "^3.2.6",
     "nodemailer": "^6.7.2",
     "nodemon": "^1.3.3",
     "react": "^17.0.2",
