--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "stream": "^0.0.2",
-    "url-loader": "^4.1.1",
     "yauzl": "^2.10.0"
   },
   "scripts": {
@@ -50,6 +49,8 @@
     ]
   },
   "devDependencies": {
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1",
     "webpack-cli": "^4.9.1"
   },
   "browser": {
