--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
+    "socket.io": "^4.5.1",
     "stream": "^0.0.2",
     "yauzl": "^2.10.0"
   },
