--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.1",
     "core-js": "^3.23.2",
     "date-fns": "^2.28.0",
+    "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
@@ -27,7 +28,9 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "stream": "^0.0.2",
+    "uuid": "^8.3.2",
     "yauzl": "^2.10.0"
   },
   "scripts": {
