--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "babel": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.1",
+    "cookie-parser": "^1.4.6",
     "core-js": "^3.23.2",
     "date-fns": "^2.28.0",
     "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "follow-redirects": "^1.15.1",
     "mongoose": "^6.1.5",
     "node": "^16.x",
     "node-downloader-helper": "^2.1.1",
