--- a/package.json
+++ b/package.json
@@ -1,42 +1,40 @@
 {
-  "name": "react-web-skeleton",
+  "name": "pdf-reader-mode",
   "version": "0.1.0",
   "main": "server/server.js",
   "private": true,
   "dependencies": {
-    "@adobe/pdfservices-node-sdk": "^2.2.2",
-    "babel": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.19.1",
+    "@adobe/pdfservices-node-sdk": "^3.3.0",
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.23.2",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.30.0",
     "debug": "^4.3.4",
-    "dotenv": "^16.0.1",
-    "express": "^4.17.2",
-    "express-session": "^1.17.2",
-    "follow-redirects": "^1.15.1",
-    "mongoose": "^6.1.5",
-    "node": "^16.x",
-    "node-downloader-helper": "^2.1.1",
-    "nodemailer": "^6.7.2",
-    "nodemon": "^1.3.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "follow-redirects": "^1.15.2",
+    "node": "^18.x",
+    "node-downloader-helper": "^2.1.9",
+    "nodemon": "^3.0.1",
     "react": "^17.0.2",
-    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0",
-    "react-icons": "^4.4.0",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
+    "react-hot-loader": "^4.13.1",
+    "react-icons": "^4.10.1",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
-    "socket.io": "^4.5.1",
-    "socket.io-client": "^4.5.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "stream": "^0.0.2",
-    "uuid": "^8.3.2",
+    "uuid": "^9.0.0",
     "yauzl": "^2.10.0"
   },
   "scripts": {
-    "hotloader": "webpack serve --config ./webpack.config.js --mode development --port 5000",
+    "hotloader": "webpack serve --mode development --port 4000",
     "start": "nodemon",
     "build": "webpack",
     "test": "react-scripts test",
@@ -55,9 +53,10 @@
     ]
   },
   "devDependencies": {
+    "babel-loader": "^9.1.3",
     "file-loader": "^6.2.0",
     "url-loader": "^4.1.1",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^5.1.4"
   },
   "browser": {
     "fs": false,
