--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.3",
     "react-hot-loader": "^4.13.1",
     "react-icons": "^4.10.1",
     "react-router": "^6.15.0",
