remove dropzone until further notice

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "file-saver": "^2.0.5",
     "follow-redirects": "^1.15.2",
     "node": "^18.x",
     "node-downloader-helper": "^2.1.9",
