--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "private": true,
   "dependencies": {
     "@adobe/pdfservices-node-sdk": "^3.3.0",
+    "@vercel/blob": "^0.17.0",
     "core-js": "^3.23.2",
     "date-fns": "^2.30.0",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "file-saver": "^2.0.5",
     "follow-redirects": "^1.15.2",
     "node": "^18.x",
-    "node-downloader-helper": "^2.1.9",
     "nodemon": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
