--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "follow-redirects": "^1.15.2",
+    "fs": "^0.0.1-security",
+    "next": "^14.0.4",
     "node": "^18.x",
     "nodemon": "^3.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hot-loader": "^4.13.1",
     "react-icons": "^4.10.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
@@ -26,12 +27,14 @@
     "socket.io-client": "^4.7.2",
     "stream": "^0.0.2",
     "uuid": "^9.0.0",
+    "vercel": "^33.1.0",
     "yauzl": "^2.10.0"
   },
   "scripts": {
     "hotloader": "webpack serve --config ./webpack.config.js --mode development --port 4000",
-    "start": "nodemon",
-    "build": "webpack",
+    "start": "next start",
+    "dev": "next dev --port 4000",
+    "build": "next build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -52,6 +55,7 @@
     "@babel/core": "^7.22.10",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.22.10",
+    "@types/react": "18.2.47",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
